# maybe-wordle

./: .gitignore  Cargo.toml  PLAN.md  PLANV2.md  README.md
benches/: solver_bench.rs
config/: prior.toml
data/formal/formal-v1/: prior.toml
data/seed/: manual_additions.txt  sources.toml
scripts/: optimize_live_config.py
src/: config.rs  data.rs  formal.rs  gui.rs  lib.rs  main.rs  model.rs  pattern_table.rs  scoring.rs  seed.rs  small_state.rs  solver.rs
src/predictive/: books.rs  mod.rs  policy.rs  recovery.rs  search.rs  state.rs  types.rs
src/solver/: books.rs  eval.rs  ranking.rs  search.rs  state.rs
tests/: integration.rs  predictive_characterization.rs
