[package]
name = "maybe-wordle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
eframe = "0.31"
rayon = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "solver_bench"
harness = false
